# token-atlas

./: .gitignore  AGENTS.md  BENCHMARKS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
.agents/rules/: AGENTS.md
.agents/skills/token-atlas/: SKILL.md  benchmark.md  initialize.md  tooling.md  validation.md
.agents/skills/zephyr-pkf/: SKILL.md  export.md  extract.md  initialize.md  maintenance.md  optimize.md  simulate.md  tooling.md  validation.md
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
benchmarks/: README.md
benchmarks/artifacts/pkf-vs-no-pkf-gpt-5.6-luna-high-2026-07-17/: manifest.json
benchmarks/artifacts/pkf-vs-no-pkf-gpt-5.6-luna-high-runtime-v3-1pass-2026-07-19/: manifest.json
benchmarks/patches/: favorite-visibility.patch
benchmarks/schemas/: benchmark-spec.schema.json  pkf-baseline-manifest.schema.json  pkf-savings-report.schema.json
benchmarks/targets/: README.md  tether-brain.json
scripts/: pkf.ps1  pkf_activation_eval.py  pkf_baseline.py  pkf_bench.py  pkf_contract.py  pkf_lib.py  pkf_savings_eval.py  pkf_tokens.py  pkf_validate.py
skills/token-atlas/: SKILL.md
skills/token-atlas-lite/: SKILL.md
skills/token-atlas-lite/agents/: openai.yaml
tests/: test_contract_consistency.py  test_pkf_activation_eval.py  test_pkf_baseline.py  test_pkf_bench.py  test_pkf_runtime_helpers.py  test_pkf_savings_eval.py  test_pkf_validate.py  test_token_atlas_lite.py  test_two_tier_boundary.py
(+238 files in other folders)
