[project]
name = "token-atlas"
version = "0.1.0"
description = "Token Atlas - An OKF Compatible Project Knowledge Framework"
authors = [
    {name = "DuelistRaj",email = "duelistrahul@gmail.com"}
]
license = "MIT License"
readme = "README.md"
requires-python = ">=3.14"
dependencies = []


[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[project.optional-dependencies]
validate = ["pyyaml>=6.0.3,<7.0.0"]
tokens = ["tiktoken>=0.7.0"]
all = ["pyyaml>=6.0.3,<7.0.0", "tiktoken>=0.7.0"]
