[project]
name = "token-atlas"
version = "0.1.0"
description = "Token Atlas - An OKF Compatible Project Knowledge Framework"
authors = [
    {name = "DuelistRaj",email = "duelistrahul@gmail.com"}
]
license = "MIT License"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
dev = [
    "pyyaml>=6.0.3,<7.0.0",
    "tiktoken>=0.7.0",
]
